@@ -4,3 +4,4 @@
 20020519 1.13 add FileSelect.pm and "man Term::Clui" works (ie with ::)
 20020601 1.14 fixed 'require Clui.raw' bug in test_script
 20020622 1.15 new Install script, and old MakeMaker-compatible Makefile.PL
+20020626 1.16 Install gets default dirs right, &tiview simpler if <3 lines
